--- a/index.html
+++ b/index.html
@@ -17,15 +17,50 @@
 
 
 
-  <nav class="top-bar" style= "background-color: #FFFFFF;" data-topbar>
+  <nav class="top-bar" data-topbar role="navigation" style= "background-color: #FFFFFF;">
         <ul class="title-area" >
-          <li class="name">
-              
+          <li class="name">  
             <img src="img/logo.png">
           </li>
           <li class="toggle-topbar menu-icon" ><a href="#">Menu</a></li>
         </ul>
       </nav>
+
+
+
+<!-- <div class="fixed">
+  
+ <nav class="top-bar" data-topbar role="navigation" style="background-color: #FFFFFF;">
+  <ul class="title-area">
+    <li class="name">
+      <img src="img/logo.png">
+    </li>
+     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+<!--     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+  </ul>
+
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <!-- <ul class="right">
+      <li class="active"><a href="#">Right Button Active</a></li>
+      <li class="has-dropdown">
+        <a href="#">Right Button Dropdown</a>
+        <ul class="dropdown">
+          <li><a href="#">First link in dropdown</a></li>
+          <li class="active"><a href="#">Active link in dropdown</a></li>
+        </ul>
+      </li>
+    </ul> -->
+
+    <!-- Left Nav Section -->
+    <!-- <ul class="left">
+      <li><a href="#">Left Nav Button</a></li>
+    </ul>
+  </section>
+</nav>
+</div> -->
+
+     
 
 
 
