--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Team</a>
+                        <a class="page-scroll" href="#contact">Find a Meter</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#portfolio">Team</a>
                     </li>
                 </ul>
             </div>
