--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">It's as easy as park & swipe.<br></h2>
                     <hr class="light">
-                    <p class="text-faded">Just locate your nearest E-Parking Meter, park in the designated location, and swipe using your phone! The meter will update your information using RFID tags, allowing for quick, easy, and hassle-free parking to let you move forward with your day.
+                    <p class="text-faded">Just locate your nearest E-Parking Meter, park in the designated location, and swipe using your phone! The meter will update your information using Google Wallet or Apple Pay, allowing for quick, easy, and hassle-free parking to let you move forward with your day.
                     </p>
                     <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
                 </div>
@@ -149,7 +149,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-credit-card wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Quick Payments</h3>
-                        <p class="text-muted">No change? No problem! Just pay by swiping your phone over the meter.</p>
+                        <p class="text-muted">No change? No problem! Just pay with a quick tap of your phone.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
